--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -47,6 +47,11 @@ form {
     z-index: 10;
     top: 21%;
     left: 35%;
+    font-size: 1.2rem;
+}
+
+.pokemonInfo p {
+    padding: 3px 0;
 }
 
 #textField, #submit {
