--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -17,7 +17,7 @@ body {
 
 form {
     position: absolute;
-    left: 25%;
+    left: 27.5%;
     bottom: 38%;
 }
 
@@ -45,7 +45,7 @@ form {
     position: absolute;
     z-index: 10;
     top: 21%;
-    left: 25%;
+    left: 28.5%;
 }
 
 #pokemonImg {
@@ -56,7 +56,7 @@ form {
     position: absolute;
     z-index: 10;
     top: 21%;
-    left: 35%;
+    left: 37%;
     font-size: 1.2rem;
 }
 
@@ -182,8 +182,8 @@ form {
 }
 
 
-/* ----------- width 1200px to 1500px-------------- */
-@media only screen and (min-width: 1200px) and (max-width: 1500px){
+/* ----------- width 1200px to 1400px-------------- */
+@media only screen and (min-width: 1200px) and (max-width: 1400px){
 
     #pokedex{
         height: 300px;
@@ -193,18 +193,45 @@ form {
         height: 150px;
         width: 150px;
         top: 22%;
-        left: 30%;
+        left: 22.5%;
     }
 
     .pokemonInfo {
         top: 22%;
-        left: 43%;
+        left: 34%;
         font-size: 1.3rem;
     }
 
     form {
-        left: 30%;
-        bottom: 33%;
+        left: 20%;
+        bottom: 38%;
+    }
+    
+}
+
+/* ----------- width 1400px to 1600px-------------- */
+@media only screen and (min-width: 1400px) and (max-width: 1600px){
+
+    #pokedex{
+        height: 300px;
+    }
+
+    #pokeImgContainer {
+        height: 150px;
+        width: 150px;
+        top: 22%;
+        left: 24.5%;
+    }
+
+    .pokemonInfo {
+        top: 22%;
+        left: 35%;
+        font-size: 1.3rem;
+    }
+
+    form {
+        left: 23%;
+        bottom: 38%;
     }
     
 }
