--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -97,8 +97,8 @@ form {
     cursor: pointer;
 }
 
-/* ----------- width 500px to 700px-------------- */
-@media only screen and (min-width: 100px) and (max-width: 500px){
+/* ----------- width 300px to 500px-------------- */
+@media only screen and (min-width: 300px) and (max-width: 500px){
     #pokedex {
         z-index: 0;
     }
@@ -118,38 +118,36 @@ form {
     }
 
     #pokeImgContainer {
-        top: 20%;
-        left: 40%;
+        width: 90px;
+        height: 90px;
+        top: 28%;
+        left: 42%;
         border: none;
     }
 
     .pokemonInfo {
-        top: 37%;
-        left: 40%;
-        font-size: 1.2rem;
+        top: 39%;
+        left: 42%;
+        font-size: .8rem;
     }
 
     form {
-        left: 21%;
         bottom: 38%;
-    }
-
-    #textField, #submit {
-        width: 140px;
+        left: 30%;
     }
 
     .arrowUp {
-        bottom: 27.9%;
+        bottom: 31%;
         left: 45%;
     }
     
     .arrowDown {
-        bottom: 16%;
+        bottom: 24%;
         left: 45%;
     }
 
     .arrowDown, .arrowUp {
-        width: 70px;
+        height: 50px;
     }
 }
 
