--- a/css/pokedex.css
+++ b/css/pokedex.css
@@ -38,14 +38,13 @@ form {
 
 #pokeImgContainer {
     /* background-color: purple; */
-    border: 2px solid black;
     border-radius: 10px;
-    height: 150px;
-    width: 150px;
+    height: 300px;
+    width: 300px;
     position: absolute;
     z-index: 10;
-    top: 21%;
-    left: 28.5%;
+    top: 19%;
+    left: 30%;
 }
 
 #pokemonImg {
@@ -53,15 +52,21 @@ form {
 }
 
 .pokemonInfo {
+    /* background-color: purple; */
     position: absolute;
+    display: flex;
+    flex-wrap: wrap;
     z-index: 10;
-    top: 21%;
-    left: 37%;
+    top: 22%;
+    right: 25.5%;
     font-size: 1.2rem;
+    width: 350px;
+    color: white;
 }
 
 .pokemonInfo p {
     padding: 3px 0;
+    margin: 5px 35px 5px 0px;
 }
 
 #textField, #submit {
@@ -99,6 +104,14 @@ form {
 
 /* ----------- width 300px to 500px-------------- */
 @media only screen and (min-width: 300px) and (max-width: 500px){
+    body {
+        height: 100%;
+        width: 100%;
+        background-size: 100vh 100%;
+        object-fit: cover;
+        overflow: hidden;
+    }
+    
     #pokedex {
         z-index: 0;
     }
@@ -118,17 +131,26 @@ form {
     }
 
     #pokeImgContainer {
-        width: 90px;
-        height: 90px;
         top: 28%;
-        left: 42%;
+        left: 38%;
         border: none;
     }
 
+    #pokemonImg {
+        width: 110px;
+        height: 110px;
+    }
+
     .pokemonInfo {
-        top: 39%;
-        left: 42%;
-        font-size: .8rem;
+        top: 41%;
+        left: 28%;
+        font-size: .9rem;
+        color: black;
+        width: 250px;
+    }
+
+    .pokemonInfo p {
+        margin: 5px 15px 5px 0px;
     }
 
     form {
@@ -151,7 +173,6 @@ form {
     }
 }
 
-
 /* ----------- width 500px to 700px-------------- */
 @media only screen and (min-width: 500px) and (max-width: 700px){
     #pokedex {
@@ -173,15 +194,21 @@ form {
     }
 
     #pokeImgContainer {
-        top: 20%;
-        left: 40%;
+        top: 18%;
+        left: 34%;
         border: none;
     }
 
+    #pokemonImg {
+        width: 200px;
+        height: 200px;
+    }
+
     .pokemonInfo {
-        top: 37%;
-        left: 40%;
-        font-size: 1.2rem;
+        top: 40%;
+        left: 32%;
+        font-size: 1.1rem;
+        color: black;
     }
 
     form {
@@ -221,15 +248,21 @@ form {
     }
 
     #pokeImgContainer {
-        top: 20%;
-        left: 40%;
+        top: 18%;
+        left: 39%;
         border: none;
     }
 
+    #pokemonImg {
+        width: 200px;
+        height: 200px;
+    }
+
     .pokemonInfo {
-        top: 37%;
-        left: 40%;
-        font-size: 1.2rem;
+        top: 40%;
+        left: 38%;
+        font-size: 1.1rem;
+        color: black;
     }
 
     form {
@@ -269,15 +302,20 @@ form {
     }
 
     #pokeImgContainer {
-        top: 20%;
-        left: 44%;
+        top: 18%;
+        left: 41%;
         border: none;
     }
 
+    #pokemonImg {
+        width: 200px;
+        height: 200px;
+    }
     .pokemonInfo {
-        top: 37%;
-        left: 45%;
-        font-size: 1.2rem;
+        top: 39%;
+        left: 40%;
+        font-size: 1.1rem;
+        color: black;
     }
 
     form {
@@ -319,8 +357,13 @@ form {
 
     #pokeImgContainer {
         top: 18%;
-        left: 44%;
+        left: 41%;
         border: none;
+    }
+
+    #pokemonImg {
+        width: 200px;
+        height: 200px;
     }
 
     #textField, #submit {
@@ -328,9 +371,10 @@ form {
     }
 
     .pokemonInfo {
-        top: 36%;
-        left: 45%;
+        top: 39%;
+        left: 40%;
         font-size: 1.1rem;
+        color: black;
     }
 
     form {
@@ -358,11 +402,8 @@ form {
     }
 
     #pokeImgContainer {
-        height: 120px;
-        width: 120px;
-        top: 21%;
-        left: 24%;
-        border: none;
+        top: 19%;
+        left: 23%;
     }
 
     #textField, #submit {
@@ -371,8 +412,7 @@ form {
 
     .pokemonInfo {
         top: 22%;
-        left: 34%;
-        font-size: 1.1rem;
+        right: 16.5%;
     }
 
     form {
@@ -393,25 +433,23 @@ form {
 }
 
 /* ----------- width 1400px to 1600px-------------- */
-@media only screen and (min-width: 1400px) and (max-width: 1600px){
+@media only screen and (min-width: 1500px) and (max-width: 1600px){
 
     #pokedex{
         height: 300px;
     }
 
     #pokeImgContainer {
-        height: 150px;
-        width: 150px;
-        top: 20%;
-        left: 25%;
-        border: none;
+        top: 18%;
+        left: 27%;
     }
+
 
     .pokemonInfo {
         top: 22%;
-        left: 35%;
-        font-size: 1.1rem;
+        right: 21%;
     }
+
 
     form {
         left: 24%;
@@ -435,24 +473,21 @@ form {
 }
 
 /* ----------- width 1600px to 1800px-------------- */
-@media only screen and (min-width: 1600px) and (max-width: 1800px){
+@media only screen and (min-width: 1700px) and (max-width: 1800px){
 
     #pokedex{
         height: 300px;
     }
 
     #pokeImgContainer {
-        height: 130px;
-        width: 130px;
-        top: 20%;
-        left: 30%;
+        top: 19%;
+        left: 29%;
         border: none;
     }
 
     .pokemonInfo {
         top: 22%;
-        left: 38%;
-        font-size: 1.1rem;
+        right: 23.5%;
     }
 
     form {
